fix font issue on mobile phone

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -16,7 +16,8 @@ body {
   color: var(--secondary-dark);
   display: flex;
   flex-direction: column;
-  font-family: 'Cormorant Regular', Arial, Helvetica, sans-serif;
+  font-family: 'Cormorant', Arial, Helvetica, sans-serif;
+  font-weight: normal;
   margin: 0;
   min-height: 100%;
 }
@@ -27,12 +28,14 @@ main {
 }
 
 h1 ,h2{
-  font-family: 'Cormorant Bold', Arial, Helvetica, sans-serif;
+  font-family: 'Cormorant', Arial, Helvetica, sans-serif;
+  font-weight: bold;
   font-size: 1.5rem;
 }
 
 h3 {
-  font-family: 'Cormorant Medium', Arial, Helvetica, sans-serif;
+  font-family: 'Cormorant', Arial, Helvetica, sans-serif;
+  font-weight: 500;
   font-size: 1.3rem;
 }
 
@@ -57,13 +60,17 @@ ul {
 
 a {
   cursor: pointer;
-  font-family: 'Cormorant BoldItalic', Arial, Helvetica, sans-serif;
+  font-family: 'Cormorant', Arial, Helvetica, sans-serif;
   font-size: 1.2rem;
+  font-style: italic;
+  font-weight: bold;
+  line-height: 1.4;
   text-decoration: none;
 }
 
 button {
   font-family: inherit;
+  font-weight: 500;
 }
 
 @media screen and (min-width:768px) {
